[package]
name = "tokio-minihttp-hello"
version = "0.1.0"
authors = ["Akito Ito <akito0107@gmail.com>"]

[dependencies]
tokio-minihttp = { git = "https://github.com/tokio-rs/tokio-minihttp" }
time = "0.1"
bytes = "0.4"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-proto = "0.1"
tokio-service = "0.1"
futures = "0.1.9"
net2 = "0.2"
num_cpus = "1.3"
httparse = "1.2.2"
